--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,19 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_map">
 
     <fragment
         android:id="@+id/navigation_map"
         android:name="net.sic.appmap.ui.map.MapsFragment"
         android:label="@string/title_navi_map"
         tools:layout="@layout/fragment_maps" />
-
-    <fragment
-        android:id="@+id/navigation_home"
-        android:name="net.sic.appmap.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_notifications"
