--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="line">#FF3700B3</color>
 
+    <color name="text">#FF000000</color>
+
 </resources>
