--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_map">
+    app:startDestination="@+id/navigation_stores">
 
     <fragment
         android:id="@+id/navigation_map"
         android:name="net.sic.appmap.ui.map.MapsFragment"
         android:label="@string/title_navi_map"
         tools:layout="@layout/fragment_maps" />
+
+    <fragment
+        android:id="@+id/navigation_stores"
+        android:name="net.sic.appmap.ui.stores.StoresFragment"
+        android:label="@string/title_navi_store"
+        tools:layout="@layout/fragment_stores" />
 
     <fragment
         android:id="@+id/navigation_notifications"
