--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.stores.StoresFragment">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -23,5 +22,16 @@
             tools:listitem="@layout/fragment_stores_item"/>
     </LinearLayout>
 
+    <ImageButton
+        android:id="@+id/btnAddTest"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:backgroundTint="@color/purple_500"
+        android:contentDescription="Clear"
+        android:src="@drawable/ic_edit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
