--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -41,7 +41,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/lnlCursor"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:background="@drawable/bg_layout_plus_map"
@@ -86,6 +86,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnDriving" />
 
+
     <Button
         android:id="@+id/btnCenterMarker"
         android:layout_width="wrap_content"
@@ -95,20 +96,35 @@
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent" />
 
-
-    <ImageButton
-        android:id="@+id/btnClearAll"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:backgroundTint="@color/purple_500"
-        android:contentDescription="Clear"
-        android:src="@drawable/ic_remove_circle_outline_24"
-        android:visibility="invisible"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/btnCenterMarker"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="HardcodedText" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/btnClearAll"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:backgroundTint="@color/purple_500"
+            android:contentDescription="Clear"
+            android:src="@drawable/ic_remove_circle_24"
+            android:visibility="invisible"
+            tools:ignore="HardcodedText" />
+
+        <ImageButton
+            android:id="@+id/btnAddMarker"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:backgroundTint="@color/purple_500"
+            android:contentDescription="Clear"
+            android:src="@drawable/ic_add_24"
+            android:visibility="invisible"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
