--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="line">#FF3700B3</color>
 
     <color name="text">#FF000000</color>
+    <color name="transparent">#80000000</color>
 
 </resources>
