--- a/app/src/main/res/layout/activity_locations_item.xml
+++ b/app/src/main/res/layout/activity_locations_item.xml
@@ -16,8 +16,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:padding="8dp"
+        android:background="@drawable/ripple_tap_holder"
         android:orientation="vertical">
 
         <TextView
@@ -39,21 +39,5 @@
             android:ellipsize="end"
             tools:ignore="HardcodedText" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <ImageButton
-            android:id="@+id/btnEdit"
-            android:layout_width="48dp"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/purple_500"
-            android:contentDescription="Clear"
-            android:src="@drawable/ic_edit"
-            tools:ignore="HardcodedText" />
     </LinearLayout>
 </LinearLayout>
