--- a/app/src/main/res/layout/fragment_stores_item.xml
+++ b/app/src/main/res/layout/fragment_stores_item.xml
@@ -7,6 +7,7 @@
 
     <LinearLayout
         android:id="@+id/viewMain"
+        android:background="@drawable/ripple_tap_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
