--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="line">#FF3700B3</color>
 
-    <color name="text">#FF000000</color>
+    <color name="text">#424242</color>
     <color name="transparent">#80000000</color>
 
 </resources>
