--- a/app/src/main/res/layout/activity_directions_item.xml
+++ b/app/src/main/res/layout/activity_directions_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/viewMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
